--- a/src/main/resources/templates/admin/lms/exam/rooms.html
+++ b/src/main/resources/templates/admin/lms/exam/rooms.html
@@ -55,12 +55,12 @@
                 {field: 'notes', title: '答题室说明', width: 100},
                 {field: 'enabled', title: '答题室状态', align: 'center', width: 100},
                 {field: 'examMode', title: '答卷模式', align: 'center', width: 100},
-                {field: 'timeMode', title: '答题时间类型', align: 'center', width: 120,templet: function (d) {return d.timeMode ? "限时" : "永久";}},
+                {field: 'timeMode', title: '时间类型', align: 'center', width: 120,templet: function (d) {return d.timeMode ? "限时" : "永久";}},
                 {field: 'timeLen', title: '答题时长', align: 'center', width: 100},
-                {field: 'timeOn', title: '答题开始时间', align: 'center', width: 120},
-                {field: 'examineeType', title: '答题类型', align: 'center', width: 100},
-                {field: 'examineeMode', title: '答题人员类型', align: 'center', width: 110},
+                {field: 'timeOn', title: '开始时间', align: 'center', width: 120},
+                {field: 'timeOff', title: '结束时间', align: 'center', width: 120},
                 {field: 'examineeCount', title: '答题次数', align: 'center', width: 100},
+                {field: 'examineeMode', title: '人员类型', align: 'center', width: 110,templet: function (d) {return d.examineeMode ? "任何人员" : "指定人员";}},
                 {field: 'subjectSortMode', title: '题目顺序', width: 90,align: 'center',templet: function (d) {return d.subjectSortMode ? "随机" : "固定";}},
                 {field: 'subjectOptSortMode', title: '选项顺序', width: 90,align: 'center',templet: function (d) {return d.subjectOptSortMode ? "随机" : "固定";}},
                 {field: 'markMode', title: '阅卷类型', align: 'center', width: 100,templet: function (d) {return d.markMode ? "人工" : "自动";}},
