--- a/src/main/resources/templates/admin/lms/exam/list.html
+++ b/src/main/resources/templates/admin/lms/exam/list.html
@@ -71,7 +71,7 @@
         // 工具条点击事件
         treeTable.on('toolbar', function (obj) {
             if (obj.event === 'add') {
-                editView("/admin/lms/exam/subject/edit", "添加通知");
+                editView("/admin/lms/exam/subject/edit", "添加");
             } else if (obj.event === 'del') {
                 layer.confirm('真的删除行么?', function (index) {
                     let selectData = table.checkStatus('table-list').data;
@@ -91,7 +91,7 @@
         treeTable.on('tool', function (obj) {
             let data = obj.data, event = obj.event;
             if (event === 'edit') {
-                editView("/admin/lms/exam/subject/edit?id=" + data.id, "编辑通知");
+                editView("/admin/lms/exam/subject/edit?id=" + data.id, "编辑");
             }
         });
 
