--- a/src/main/resources/templates/admin/lms/exam/logs.html
+++ b/src/main/resources/templates/admin/lms/exam/logs.html
@@ -37,13 +37,14 @@
             toolbar: '#toolbar',
             cols: [ [
                 {type: 'checkbox'},
-                {field: 'title', title: '名称', minWidth: 80},
-                {field: 'content', title: '内容', minWidth: 80},
-                {field: 'url', title: '访问地址', minWidth: 80},
-                {field: 'visits', title: '访问量', minWidth: 80},
-                {field: 'sort', title: '排序', minWidth: 80},
-                {field: 'enabled', title: '状态', align: 'center', templet: "#statusTpl", width: 100},
-                {fixed: 'right', title: '操作', align: 'center', toolbar: '#column-toolbar'}
+                {field: 'examRoomName', title: '答题室名', minWidth: 80},
+                {field: 'userName', title: '用户名', minWidth: 80},
+                {field: 'score', title: '得分', minWidth: 80},
+                {field: 'timeOn', title: '开始时间', minWidth: 80},
+                {field: 'timeOff', title: '结束时间', minWidth: 80},
+                {field: 'totalQuestions', title: '总题数', minWidth: 80},
+                {field: 'correctQuestions', title: '正确题数', minWidth: 80},
+                {field: 'wrongQuestions', title: '错误题数', minWidth: 80},
             ] ]
         });
         form.on('submit(search)', function (form) {
