--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -85,7 +85,7 @@
     <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%)">
         <div class="layui-container">
             <div class="layui-header">
-                <div class="layui-row layui-col-space20">
+                <div class="layui-row">
                     <!-- Logo -->
                     <div class="layui-logo" style="color: #fff; font-size: 22px; height: 60px; line-height: 45px;">
                         <img th:src="@{/images/logo.png}" alt="logo" height="30px"/>
