--- a/src/main/resources/templates/admin/lms/exam/list.html
+++ b/src/main/resources/templates/admin/lms/exam/list.html
@@ -81,7 +81,7 @@
                             idsArray.push(selectData[i].id);
                         }
                         let ids = idsArray.toString();
-                        changeReq(ids, '/admin/lms/exam/subject/del')
+                        deleteReq(ids, '/admin/lms/exam/subject/del')
                         layer.close(index);
                     }
                 });
