--- a/src/main/resources/templates/admin/sys/dept/list.html
+++ b/src/main/resources/templates/admin/sys/dept/list.html
@@ -107,7 +107,7 @@
                             idsArray.push(selectData[i].id);
                         }
                         let ids = idsArray.toString();
-                        changeReq(ids, '/admin/dept/del')
+                        deleteReq(ids, '/admin/dept/del')
                         layer.close(index);
                     }
                 });
