--- a/src/main/resources/templates/admin/sys/resources/list.html
+++ b/src/main/resources/templates/admin/sys/resources/list.html
@@ -70,7 +70,7 @@
                             idsArray.push(selectData[i].id);
                         }
                         let ids = idsArray.toString();
-                        changeReq(ids, '/admin/res/del')
+                        deleteReq(ids, '/admin/res/del')
                         layer.close(index);
                     }
                 });
