--- a/src/main/resources/templates/admin/lms/exam/rooms.html
+++ b/src/main/resources/templates/admin/lms/exam/rooms.html
@@ -89,7 +89,7 @@
                             idsArray.push(selectData[i].id);
                         }
                         let ids = idsArray.toString();
-                        changeReq(ids, '/admin/lms/top/del')
+                        deleteReq(ids, '/admin/lms/top/del')
                         layer.close(index);
                     }
                 });
