--- a/src/main/resources/templates/admin/lms/question/materials.html
+++ b/src/main/resources/templates/admin/lms/question/materials.html
@@ -78,7 +78,7 @@
                             idsArray.push(selectData[i].id);
                         }
                         let ids = idsArray.toString();
-                        changeReq(ids, '/admin/lms/question/material/del')
+                        deleteReq(ids, '/admin/lms/question/material/del')
                         layer.close(index);
                     }
                 });
